force-app/main/default/objects/Product2/fields/Auto_Create_Billable_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Billable_Work_Order__c</fullName>
    <description>Integration populated field on Product to identify Products for Auto Work Order Creation.</description>
    <inlineHelpText>Field for Billable Product Identification and requirement for Work Order creation</inlineHelpText>
    <label>Auto Create Billable Work Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Create Field Service Relocation Work Order</fullName>
            </value>
            <value>
                <fullName>Auto Create Field Service Preventative Maintenance Work Order</fullName>
            </value>
            <value>
                <fullName>Auto Create Service Support Professional Service FSE Work Order</fullName>
            </value>
            <value>
                <fullName>Auto Create Service Support Professional Service FAS Work Order</fullName>
            </value>
            <value>
                <fullName>Auto Create Service Support Clarity LIMS Work Order</fullName>
            </value>
            <value>
                <fullName>Auto Create Billable Install Work Order for Purchased Installs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>