force-app/main/default/objects/Product2/fields/Auto_Create_Install_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Install_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to denote whether an install work order needs to be created or not for that instrument when it&apos;s synced from SAP</description>
    <label>Auto Create Install Work Order</label>
    <type>Checkbox</type>
</CustomField>