force-app/main/default/objects/Product2/fields/Auto_Create_Installation_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Installation_Workflow__c</fullName>
    <inlineHelpText>Field for Installation Case or Work Order creation requirement</inlineHelpText>
    <label>Auto Create Installation Workflow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Create Install Work Order Only</fullName>
            </value>
            <value>
                <fullName>Auto Create Install Work Order and Service Request Case</fullName>
            </value>
            <value>
                <fullName>Auto Create Service Request Case Only</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>