force-app/main/default/objects/Product2/fields/Auto_Create_IQ_OQ__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_IQ_OQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, an IQ/OQ activity will be auto created on the install work order.</description>
    <inlineHelpText>If checked, an IQ/OQ activity will be auto created on the install work order.</inlineHelpText>
    <label>Auto Create IQ/OQ</label>
    <type>Checkbox</type>
</CustomField>