force-app/main/default/objects/Product2/fields/Batch_Management__c.field-meta.xml
<CustomField>
    <fullName>Batch_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store the Batch Management value coming from SAP to SFDC.</description>
    <label>Batch Management</label>
    <type>Checkbox</type>
</CustomField>