force-app/main/default/objects/Product2/fields/Bundle_Channel__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Channel__c</fullName>
    <description>The bundle channel - [&quot;online&quot;], [&quot;offline&quot;] , [&quot;online&quot;,&quot;offline&quot;]</description>
    <label>Bundle Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>online</fullName>
            </value>
            <value>
                <fullName>offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>