force-app/main/default/objects/Product2/fields/Bundle_Id__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Id__c</fullName>
    <description>Auto-number Field to specify Bundle Id.</description>
    <displayFormat>BNDL-{00000}</displayFormat>
    <label>Bundle Id</label>
    <type>AutoNumber</type>
</CustomField>