force-app/main/default/objects/Product2/fields/Bundle_Products__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Products__c</fullName>
    <description>Array of product objects that are bundled together</description>
    <label>Bundle Products</label>
    <type>TextArea</type>
</CustomField>