force-app/main/default/objects/Product2/fields/Commercial_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Launch_Date__c</fullName>
    <description>Field to specify Commercial Launch Date.</description>
    <label>Commercial Launch Date</label>
    <type>DateTime</type>
</CustomField>