force-app/main/default/objects/Product2/fields/Commodity_Import_Code_India_HSN__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Import_Code_India_HSN__c</fullName>
    <label>Commodity Import Code (HSN)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>