force-app/main/default/objects/Product2/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <description>Field to store Condition Type.</description>
    <label>Condition Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>