force-app/main/default/objects/Product2/fields/Control_Code_India_SAC__c.field-meta.xml
<CustomField>
    <fullName>Control_Code_India_SAC__c</fullName>
    <label>Control Code (SAC)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>