force-app/main/default/objects/Product2/fields/Cross_Distribution_Chain_Status__c.field-meta.xml
<CustomField>
    <fullName>Cross_Distribution_Chain_Status__c</fullName>
    <description>Field to store Cross Distribution Chain Status.</description>
    <label>Cross Distribution Chain Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>