force-app/main/default/objects/Product2/fields/Cross_Plant_Material_Status__c.field-meta.xml
<CustomField>
    <fullName>Cross_Plant_Material_Status__c</fullName>
    <description>Field to store Cross Plant Material Status.</description>
    <label>Cross Plant Material Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>