force-app/main/default/objects/Product2/fields/Cross_Plant_Material_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Cross_Plant_Material_Status_Description__c</fullName>
    <description>Field to store Cross Plant Material Status Description.</description>
    <label>Cross Plant Material Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>