force-app/main/default/objects/Product2/fields/Custom_Product__c.field-meta.xml
<CustomField>
    <fullName>Custom_Product__c</fullName>
    <description>Field to specify if Custom Product or not.</description>
    <defaultValue>false</defaultValue>
    <label>Custom Product</label>
    <type>Checkbox</type>
</CustomField>