force-app/main/default/objects/Product2/fields/Dangerous_Goods__c.field-meta.xml
<CustomField>
    <fullName>Dangerous_Goods__c</fullName>
    <businessOwnerUser>msanna@illumina.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify the Dangerous Goods and the value is populated through SAP.</description>
    <inlineHelpText>Return or transfer this part only if required, or scrap according to your local guidelines. Contact your regional Customer Care for any questions.</inlineHelpText>
    <label>Dangerous Goods</label>
    <type>Checkbox</type>
</CustomField>