force-app/main/default/objects/Product2/fields/Decontamination_Required__c.field-meta.xml
<CustomField>
    <fullName>Decontamination_Required__c</fullName>
    <description>To check if Decontamination is required or not.</description>
    <defaultValue>false</defaultValue>
    <label>Decontamination Required</label>
    <type>Checkbox</type>
</CustomField>