force-app/main/default/objects/Product2/fields/Design_Critical_Part__c.field-meta.xml
<CustomField>
    <fullName>Design_Critical_Part__c</fullName>
    <description>To check if Design is critical part or not.</description>
    <defaultValue>false</defaultValue>
    <label>Design Critical Part</label>
    <type>Checkbox</type>
</CustomField>