force-app/main/default/objects/Product2/fields/Device_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Device_Identifier__c</fullName>
    <description>Field to store Device Identifier.</description>
    <label>Device Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>