force-app/main/default/objects/Product2/fields/DRAGEN_Throughput_Gb__c.field-meta.xml
<CustomField>
    <fullName>DRAGEN_Throughput_Gb__c</fullName>
    <description>Number field to store DRAGEN Throughput Gb.</description>
    <label>DRAGEN Throughput (Gb)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>