force-app/main/default/objects/Product2/fields/End_Of_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Sale_Date__c</fullName>
    <description>Date/Time field to store End od Sale Date.</description>
    <label>End Of Sale Date</label>
    <type>DateTime</type>
</CustomField>