force-app/main/default/objects/Product2/fields/End_Of_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Service_Date__c</fullName>
    <description>Field to specify End Of Service Date.</description>
    <label>End Of Service Date</label>
    <type>DateTime</type>
</CustomField>