force-app/main/default/objects/Product2/fields/End_Of_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Ship_Date__c</fullName>
    <description>Field to store End Of Ship Date.</description>
    <label>End Of Ship Date</label>
    <type>DateTime</type>
</CustomField>