force-app/main/default/objects/Product2/fields/ERP_Material_Header_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Material_Header_Description__c</fullName>
    <description>ERP Material Header Description</description>
    <label>ERP Material Header Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>