force-app/main/default/objects/Product2/fields/FIN_Description__c.field-meta.xml
<CustomField>
    <fullName>FIN_Description__c</fullName>
    <description>Field to store description.</description>
    <label>FIN Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>