force-app/main/default/objects/Product2/fields/FRU_Eligible__c.field-meta.xml
<CustomField>
    <fullName>FRU_Eligible__c</fullName>
    <description>Text field for FRU Eligible.</description>
    <label>FRU Eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>