force-app/main/default/objects/Product2/fields/Fulfillment_Path__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Path__c</fullName>
    <description>Field to store Fulfillment Path.</description>
    <label>Fulfillment Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>