force-app/main/default/objects/Product2/fields/GFSL_FC_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>GFSL_FC_Hierarchy__c</fullName>
    <description>Field to store GFSL FC Hierarchy.</description>
    <label>GFSL FC Hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>