force-app/main/default/objects/Product2/fields/Informatics_Family__c.field-meta.xml
<CustomField>
    <fullName>Informatics_Family__c</fullName>
    <description>Field to store Informatics Family.</description>
    <label>Informatics Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>