force-app/main/default/objects/Product2/fields/Informatics_SKU_Type__c.field-meta.xml
<CustomField>
    <fullName>Informatics_SKU_Type__c</fullName>
    <description>Field to store Informatics SKU Type.</description>
    <label>Informatics SKU Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>