force-app/main/default/objects/Product2/fields/Is_Service_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_User__c</fullName>
    <description>Is Service User will be true if logged user is service user.</description>
    <formula>OR(
 $Profile.Name ==$Label.Channel_Partner_Profile_Name,
$Profile.Name ==$Label.ProfileChannelPartnerService,
$Profile.Name ==$Label.ProfileChannelPartnerSalesandReadOnlyService,
$Profile.Name ==$Label.ProfileChannelPartnerSalesandReadOnlyServiceLog,
$Profile.Name ==$Label.ProfileCustomerService,
$Profile.Name ==$Label.ProfileDataSteward,
$Profile.Name ==$Label.ProfileFastTrackServices,
$Profile.Name ==$Label.ProfileFieldCompliance,
$Profile.Name ==$Label.ProfileFieldService,
$Profile.Name ==$Label.ProfileProductSupport,
$Profile.Name ==$Label.ProfileProfessionalServices,
$Profile.Name ==$Label.ProfileQualityAssurance,
$Profile.Name ==$Label.ProfileServiceCenter,
$Profile.Name ==$Label.ProfileServiceLogisticsUsers,
$Profile.Name ==$Label.ProfileServiceReadOnly,
$Profile.Name ==$Label.ProfileSystemAdmin,
$Profile.Name ==$Label.ProfileTechnicalSupport,
$Profile.Name ==$Label.ProfileConcierge,
$Permission.SS_Service_Ops_Edit_Custom_Perm,
$Permission.SS_Service_objects_Read_Only_Custom_Perm
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Service User</label>
    <type>Checkbox</type>
</CustomField>