force-app/main/default/objects/Product2/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <description>Field to store Line of Business.</description>
    <label>Line of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>