force-app/main/default/objects/Product2/fields/Line_Of_Business_Code__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business_Code__c</fullName>
    <description>Field to store Line Of Business Code.</description>
    <label>Line Of Business Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>