force-app/main/default/objects/Product2/fields/Material_Class__c.field-meta.xml
<CustomField>
    <fullName>Material_Class__c</fullName>
    <description>Requested by : user story DCP – 2073
Why : To be able to classify the products
Value source : Information would flow in from SAP</description>
    <label>Material Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informatics Software</fullName>
            </value>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Document Training</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Service Part</fullName>
                <isActive>false</isActive>
                <label>Service Part</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>