force-app/main/default/objects/Product2/fields/Material_Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Class_Type__c</fullName>
    <description>Field to store Material Class Type.</description>
    <label>Material Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Combination</fullName>
            </value>
            <value>
                <fullName>Consumables Accessory</fullName>
            </value>
			<value>
				<fullName>Consumables Components</fullName>
			</value>
            <value>
                <fullName>Consumables Spares</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>EPI Consumables</fullName>
            </value>
            <value>
                <fullName>FastTrack Service</fullName>
            </value>
            <value>
                <fullName>Freight &amp; Insurance</fullName>
            </value>
            <value>
                <fullName>Infinium Consumables</fullName>
            </value>
            <value>
                <fullName>Informatics</fullName>
            </value>
			<value>
				<fullName>Instrument Components</fullName>
			</value>
            <value>
                <fullName>Instrument Misc</fullName>
            </value>
            <value>
                <fullName>Instrument Service</fullName>
            </value>
            <value>
                <fullName>Instrument Spares</fullName>
            </value>
            <value>
                <fullName>Kitted Solutions</fullName>
            </value>
            <value>
                <fullName>Library Prep Consumables</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Oligos</fullName>
            </value>
            <value>
                <fullName>Other Consumables</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
            <value>
                <fullName>Professional Service</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Software Licence</fullName>
            </value>
            <value>
                <fullName>Software Licence Renewal</fullName>
            </value>
            <value>
                <fullName>Standard Consumables</fullName>
            </value>
			<value>
				<fullName>SW_Informatics_Applications</fullName>
			</value>
			<value>
				<fullName>SW_Informatics_Consumption_Genrl</fullName>
			</value>
			<value>
				<fullName>SW_Informatics_Platform</fullName>
			</value>
			<value>
				<fullName>SW_Informatics_Solutions</fullName>
			</value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>