force-app/main/default/objects/Product2/fields/Material_Group_1_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Group_1_Code__c</fullName>
    <description>DCP-40232- Material Group1 - Product details - Integration</description>
    <label>Material Group 1 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>