force-app/main/default/objects/Product2/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <description>US-439
Product’s material number
Populated from SAP</description>
    <externalId>true</externalId>
    <label>Material Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>