force-app/main/default/objects/Product2/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <description>DCP-25195 - Created for storing Material Type value from SAP</description>
    <label>Material Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>