force-app/main/default/objects/Product2/fields/Number_Of_BeadChips_Per_Sample__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_BeadChips_Per_Sample__c</fullName>
    <description>Field to store Number Of BeadChips Per Sample.</description>
    <label>Number Of BeadChips Per Sample</label>
    <length>255</length>
    <type>Text</type>
</CustomField>