force-app/main/default/objects/Product2/fields/Number_of_iCredits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_iCredits__c</fullName>
    <description>Field to specify Number of iCredits.</description>
    <label>Number of iCredits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>