force-app/main/default/objects/Product2/fields/Number_of_Instances__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Instances__c</fullName>
    <description>Field to store Number of Instances.</description>
    <label>Number of Instances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>