force-app/main/default/objects/Product2/fields/Number_Of_Samples__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Samples__c</fullName>
    <description>Field to store Number Of Samples.</description>
    <label>Number Of Samples</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>