force-app/main/default/objects/Product2/fields/Old_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Material_Number__c</fullName>
    <description>Field to store Old Material Number.</description>
    <label>Old Material Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>