force-app/main/default/objects/Product2/fields/Open_Offer_Product__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Open Offer Product</description>
	<inlineHelpText>List of SKUS subject to the open offer.</inlineHelpText>
    <label>Open Offer Product</label>
    <type>Checkbox</type>
</CustomField>