force-app/main/default/objects/Product2/fields/Open_Offer_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Product_Category__c</fullName>
    <description>Open Offer Product Category</description>
    <inlineHelpText>Products in the Open Offer</inlineHelpText>
    <label>Open Offer Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Open_Offer_Product_Category</valueSetName>
    </valueSet>
</CustomField>