force-app/main/default/objects/Product2/fields/Previous_Item__c.field-meta.xml
<CustomField>
    <fullName>Previous_Item__c</fullName>
    <description>To capture the previous version of the part that will be used
Source: SAP Integration</description>
    <label>Previous Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>