force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Picklist field to specify Category of the product.</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BaseSpace Suite</fullName>
            </value>
            <value>
                <fullName>CytoGenomics</fullName>
            </value>
            <value>
                <fullName>Epigenetics</fullName>
            </value>
            <value>
                <fullName>EPI Molecular Biology</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>Gene Expression</fullName>
            </value>
            <value>
                <fullName>Genotyping</fullName>
            </value>
            <value>
                <fullName>HiSeq</fullName>
            </value>
            <value>
                <fullName>HiSeq HD</fullName>
            </value>
            <value>
                <fullName>HiSeq X</fullName>
            </value>
            <value>
                <fullName>iSeq</fullName>
            </value>
            <value>
                <fullName>Library Prep</fullName>
            </value>
            <value>
                <fullName>MA Automation</fullName>
            </value>
            <value>
                <fullName>MA Miscellaneous</fullName>
            </value>
            <value>
                <fullName>MA Scanners</fullName>
            </value>
            <value>
                <fullName>MA Services</fullName>
            </value>
            <value>
                <fullName>MA Software</fullName>
            </value>
            <value>
                <fullName>MiniSeq</fullName>
            </value>
            <value>
                <fullName>MiSeq</fullName>
            </value>
            <value>
                <fullName>NextSeq</fullName>
            </value>
            <value>
                <fullName>NextSeq 1000/2000</fullName>
            </value>
            <value>
                <fullName>NextSeq 500/550</fullName>
            </value>
            <value>
                <fullName>NovaSeq</fullName>
            </value>
            <value>
                <fullName>NovaSeq X Series</fullName>
            </value>
            <value>
                <fullName>Other MA Systems</fullName>
            </value>
            <value>
                <fullName>SQ Misc</fullName>
            </value>
            <value>
                <fullName>SQ Services</fullName>
            </value>
            <value>
                <fullName>SQ Software/Server</fullName>
            </value>
            <value>
                <fullName>SQ Supporting Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>