force-app/main/default/objects/Product2/fields/Product_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Code__c</fullName>
    <description>Field to store Product Category Code.</description>
    <label>Product Category Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>