force-app/main/default/objects/Product2/fields/Product_Level_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Product_Level_Indicator__c</fullName>
    <description>Product Level Indicator</description>
    <label>Product Level Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>