force-app/main/default/objects/Product2/fields/Product_Line_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Code__c</fullName>
    <description>Field to store Product Line Code.</description>
    <label>Product Line Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>